// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading base demo works fine 1`] = `
<span
  class="t-loading"
>
  <svg
    class="t-icon t-icon-loading"
  >
    <use
      xlink:href="#t-icon-loading"
    />
  </svg>
</span>
`;

exports[`Loading delay demo works fine 1`] = `
<div>
  <slot />
   
  <div
    class="switch-demo"
  >
    
    Loading state:
    
    <div
      class="t-switch t-size-m"
    >
      <span
        class="t-switch__handle"
      />
      <div
        class="t-switch__content t-size-m"
      />
    </div>
  </div>
</div>
`;

exports[`Loading fullscreen demo works fine 1`] = `
<div>
  <slot />
   
  <div
    class="switch-demo"
  >
    
    Loading state:
    
    <div
      class="t-switch t-size-m"
    >
      <span
        class="t-switch__handle"
      />
      <div
        class="t-switch__content t-size-m"
      />
    </div>
  </div>
</div>
`;

exports[`Loading iconText demo works fine 1`] = `
<span
  class="t-loading t-loading-text"
>
  <svg
    class="t-icon t-icon-loading"
  >
    <use
      xlink:href="#t-icon-loading"
    />
  </svg>
  <span>
    加载中
  </span>
</span>
`;

exports[`Loading indicatorSlot demo works fine 1`] = `
<div>
  <span
    class="t-loading"
  >
    <svg
      class="t-icon t-icon-loading"
    >
      <use
        xlink:href="#t-icon-loading"
      />
    </svg>
  </span>
</div>
`;

exports[`Loading preventScrollThrough demo works fine 1`] = `
<span
  class="t-loading"
>
  <svg
    class="t-icon t-icon-loading"
  >
    <use
      xlink:href="#t-icon-loading"
    />
  </svg>
</span>
`;

exports[`Loading service demo works fine 1`] = `
<div>
  <div
    class="switch-demo"
  >
    
    开启函数方式调用:
    
    <div
      class="t-switch t-size-m"
    >
      <span
        class="t-switch__handle"
      />
      <div
        class="t-switch__content t-size-m"
      />
    </div>
  </div>
   
  <div>
    函数方式调用只支持全屏模式
  </div>
</div>
`;

exports[`Loading size demo works fine 1`] = `
<div
  class="loading-demo"
>
  <span>
    小
  </span>
   
  <span
    class="t-loading t-size-s"
  >
    <svg
      class="t-icon t-icon-loading"
    >
      <use
        xlink:href="#t-icon-loading"
      />
    </svg>
  </span>
   
  <span>
    中
  </span>
   
  <span
    class="t-loading"
  >
    <svg
      class="t-icon t-icon-loading"
    >
      <use
        xlink:href="#t-icon-loading"
      />
    </svg>
  </span>
   
  <span>
    大
  </span>
   
  <span
    class="t-loading t-size-l"
  >
    <svg
      class="t-icon t-icon-loading"
    >
      <use
        xlink:href="#t-icon-loading"
      />
    </svg>
  </span>
</div>
`;

exports[`Loading text demo works fine 1`] = `
<span
  class="t-loading"
>
  加载中...
</span>
`;

exports[`Loading wrap demo works fine 1`] = `
<div
  class="loading-demo"
>
  <div
    class="t-loading-parent__relative"
  >
    <div>
      this is loading component
    </div>
    <div
      class="t-loading__wrapper t-loading-mask"
    >
      <span
        class="t-loading"
      >
        <svg
          class="t-icon t-icon-loading"
        >
          <use
            xlink:href="#t-icon-loading"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
